@@ -73,6 +73,8 @@ public class ActionServiceImpl implements ActionService {
         try {
             Pageable pageable = PageRequest.of(
                     parameters.getStart()/ parameters.getLength(), parameters.getLength());
+            System.out.println("PageNumber = " + parameters.getStart()/ parameters.getLength()
+                    + ", PageSize = " + parameters.getLength());
             Page<Action> ActionPage;
             if (parameters.getSearch() != null && !StringUtils.isEmpty(parameters.getSearch().getValue())) {
                 RequestDto requestDto = new RequestDto();
@@ -104,10 +106,9 @@ public class ActionServiceImpl implements ActionService {
                 ActionPage = actionDao.findAll(searchSpecification, pageable);
             }
             else {
-                System.out.println("C'est ici !!");
                 ActionPage = actionDao.findAll(pageable);
             }
-            List<ActionDto> content = ActionPage.getContent().stream().map(actionMapper::deAction).collect(Collectors.toList());
+            List<ActionDto> content = ActionPage.getContent().stream().map(actionMapper::deAction).toList();
             DataTablesResponse<ActionDto> dataTablesResponse = new DataTablesResponse<>();
             dataTablesResponse.setDraw(parameters.getDraw());
             dataTablesResponse.setRecordsFiltered((int)ActionPage.getTotalElements());
